[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/ScrollablePopupMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://EditorsElements/DialogEditor/EditUiBlocks/DialogEndEditBlock.gd" type="Script" id=2]

[node name="DialogEndEditBlock" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="Dialog" type="HBoxContainer" parent="."]
margin_right = 85.0
margin_bottom = 21.0

[node name="Label" type="Label" parent="Dialog"]
margin_top = 3.0
margin_right = 69.0
margin_bottom = 18.0
text = "Exit to dialog:"

[node name="DialogPick" parent="Dialog" instance=ExtResource( 1 )]
margin_left = 73.0
margin_right = 85.0
size_flags_horizontal = 3

[node name="StartPoint" type="HBoxContainer" parent="."]
margin_top = 25.0
margin_right = 85.0
margin_bottom = 46.0

[node name="Label" type="Label" parent="StartPoint"]
margin_top = 3.0
margin_right = 68.0
margin_bottom = 18.0
text = "In start point:"

[node name="StartPointPick" parent="StartPoint" instance=ExtResource( 1 )]
margin_left = 72.0
margin_right = 85.0
size_flags_horizontal = 3

[connection signal="item_selected" from="Dialog/DialogPick" to="." method="_on_DialogPick_item_selected"]
[connection signal="item_selected" from="StartPoint/StartPointPick" to="." method="_on_StartPointPick_item_selected"]
